# 2D-Shooter-LAN-Game

./: .directory  .gitignore  LICENSE  README.md  a.out  basicAI.cpp  basicAI.h  body.cpp  body.h  bullet.cpp  bullet.h  compile.cpp  compile.out  compileDate  enemy.cpp  enemy.h  files  floor.cpp  floor.h  info.h  main.cpp  main.d  makefile  makefile_old  mapObject.cpp  mapObject.h  math_calc.cpp  math_calc.h  player.cpp  player.h  script.sh  sfml-app  wall.cpp  wall.h  world.cpp  world.h  world_loader.cpp  world_loader.h
client/: .directory  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.d  makefile  network_info.txt  sfml-app
client/headers/: .#flag.h  body.h  bottom_bar.h  bottom_bar.h~  bullet.h  connection.h  e_player.h  flag.h  flag.h~  floor.h  game.h  getch.h  input_data.h  load_from_files.h  load_from_files.h~  load_network_info.h~  log.h  map_object.h  math_calc.h  network_info.h  network_info.h~  tile.h  time.h  user_input.h  wall.h  world.h  world_loader.h
client/sources/: #connection.cpp#  .#connection.cpp  body.cpp  bottom_bar.cpp  bottom_bar.cpp~  bullet.cpp  bullet.d  connection.cpp  connection.d  e_player.cpp  e_player.d  flag.cpp  floor.cpp  floor.d  game.cpp  game.d  load_from_files.cpp  load_from_files.cpp~  load_from_files.d  main.cpp  main.cpp~  map_object.cpp  math_calc.cpp  math_calc.d  tile.cpp  world.cpp  world.d  world_loader.cpp  world_loader.d
compile_old/: compile.cpp  files
headers/: basicAI.h  body.h  bullet.h  client.h  connectionMenager.h  e_player.h  enemy.h  floor.h  getch.h  input.h  log.h  mapObject.h  player.h  server.h  time.h  wall.h  world.h  world_loader.h
img/: ludzik.xcf
server/: #main.cpp#  .directory  .gitignore  main.cpp  main.d  makefile  server.txt  sfml-app
sources/: basicAI.cpp  basicAI.d  body.cpp  body.d  bullet.cpp  bullet.d  client.cpp  client.d  connectionMenager.cpp  connectionMenager.d  e_player.cpp  e_player.d  enemy.cpp  enemy.d  floor.cpp  floor.d  main.cpp  main.d  mapObject.cpp  mapObject.d  math_calc.cpp  math_calc.d  player.cpp  player.d  server.cpp  server.d  wall.cpp  (+5 more)
(+57 files in other folders)
